--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
   },
