--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.73.6",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
